// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fromCreateFieldInputToFlatFieldMetadatasToCreate MORPH_RELATION test suite Failure cases should fail when morphRelationsCreationPayload has different relation types 1`] = `
{
  "errors": [
    {
      "code": "FIELD_METADATA_RELATION_MALFORMED",
      "message": "Morph relation creation payloads must have the same relation type",
      "userFriendlyMessage": {
        "id": Any<String>,
        "message": "Morph relation creation payloads must have the same relation type",
      },
    },
  ],
  "status": "fail",
}
`;

exports[`fromCreateFieldInputToFlatFieldMetadatasToCreate MORPH_RELATION test suite Failure cases should fail when morphRelationsCreationPayload has invalid relation payload 1`] = `
{
  "errors": [
    {
      "code": "FIELD_METADATA_RELATION_MALFORMED",
      "message": "Morph relation input transpilation failed",
      "userFriendlyMessage": {
        "id": Any<String>,
        "message": "Invalid morph relation input",
      },
      "value": [
        {
          "targetObjectMetadataId": Any<String>,
          "type": "ONE_TO_MANY",
        },
      ],
    },
  ],
  "status": "fail",
}
`;

exports[`fromCreateFieldInputToFlatFieldMetadatasToCreate MORPH_RELATION test suite Failure cases should fail when morphRelationsCreationPayload has several references to same object metadata 1`] = `
{
  "errors": [
    {
      "code": "FIELD_METADATA_RELATION_MALFORMED",
      "message": "Morph relation creation payloads must have only relation to the same object metadata",
      "userFriendlyMessage": {
        "id": Any<String>,
        "message": "Morph relation creation payloads must only contain relation to the same object metadata",
      },
    },
  ],
  "status": "fail",
}
`;

exports[`fromCreateFieldInputToFlatFieldMetadatasToCreate MORPH_RELATION test suite Failure cases should fail when morphRelationsCreationPayload is empty array 1`] = `
{
  "errors": [
    {
      "code": "FIELD_METADATA_RELATION_MALFORMED",
      "message": "Morph relation creation payloads are empty",
      "userFriendlyMessage": {
        "id": Any<String>,
        "message": "At least one relation is require",
      },
    },
  ],
  "status": "fail",
}
`;

exports[`fromCreateFieldInputToFlatFieldMetadatasToCreate MORPH_RELATION test suite Failure cases should fail when morphRelationsCreationPayload is missing 1`] = `
{
  "errors": [
    {
      "code": "INVALID_FIELD_INPUT",
      "message": "Relation creation payload is required",
      "userFriendlyMessage": {
        "id": Any<String>,
        "message": "Relation creation payload is required",
      },
      "value": undefined,
    },
  ],
  "status": "fail",
}
`;

exports[`fromCreateFieldInputToFlatFieldMetadatasToCreate MORPH_RELATION test suite Failure cases should fail when target object metadata is not found 1`] = `
{
  "errors": [
    {
      "code": "FIELD_METADATA_RELATION_MALFORMED",
      "message": "Morph relation input transpilation failed",
      "userFriendlyMessage": {
        "id": Any<String>,
        "message": "Invalid morph relation input",
      },
      "value": [
        {
          "targetFieldIcon": "IconPet",
          "targetFieldLabel": "Pet",
          "targetObjectMetadataId": Any<String>,
          "type": "ONE_TO_MANY",
        },
      ],
    },
  ],
  "status": "fail",
}
`;

exports[`fromCreateFieldInputToFlatFieldMetadatasToCreate MORPH_RELATION test suite Success cases should create morph relation field metadata with valid input on rocket object to pet object 1`] = `
{
  "result": {
    "flatFieldMetadatas": [
      {
        "applicationId": Any<String>,
        "calendarViewIds": [],
        "createdAt": Any<String>,
        "defaultValue": null,
        "description": "new field description",
        "icon": "IconRelationOneToMany",
        "id": Any<String>,
        "isActive": true,
        "isCustom": true,
        "isLabelSyncedWithName": false,
        "isNullable": true,
        "isSystem": false,
        "isUIReadOnly": false,
        "isUnique": false,
        "kanbanAggregateOperationViewIds": [],
        "label": "newFieldLabel",
        "mainGroupByFieldMetadataViewIds": [],
        "morphId": Any<String>,
        "name": "newFieldPets",
        "objectMetadataId": Any<String>,
        "options": null,
        "relationTargetFieldMetadataId": Any<String>,
        "relationTargetObjectMetadataId": Any<String>,
        "settings": {
          "relationType": "ONE_TO_MANY",
        },
        "standardId": null,
        "standardOverrides": null,
        "type": "MORPH_RELATION",
        "universalIdentifier": Any<String>,
        "updatedAt": Any<String>,
        "viewFieldIds": [],
        "viewFilterIds": [],
        "workspaceId": Any<String>,
      },
      {
        "applicationId": Any<String>,
        "calendarViewIds": [],
        "createdAt": Any<String>,
        "defaultValue": null,
        "description": "new field description",
        "icon": "IconPet",
        "id": Any<String>,
        "isActive": true,
        "isCustom": true,
        "isLabelSyncedWithName": false,
        "isNullable": true,
        "isSystem": false,
        "isUIReadOnly": false,
        "isUnique": false,
        "kanbanAggregateOperationViewIds": [],
        "label": "Pet",
        "mainGroupByFieldMetadataViewIds": [],
        "morphId": null,
        "name": "pet",
        "objectMetadataId": Any<String>,
        "options": null,
        "relationTargetFieldMetadataId": Any<String>,
        "relationTargetObjectMetadataId": Any<String>,
        "settings": {
          "joinColumnName": "petId",
          "onDelete": "SET_NULL",
          "relationType": "MANY_TO_ONE",
        },
        "standardId": null,
        "standardOverrides": null,
        "type": "RELATION",
        "universalIdentifier": Any<String>,
        "updatedAt": Any<String>,
        "viewFieldIds": [],
        "viewFilterIds": [],
        "workspaceId": Any<String>,
      },
      {
        "applicationId": Any<String>,
        "calendarViewIds": [],
        "createdAt": Any<String>,
        "defaultValue": null,
        "description": "new field description",
        "icon": "IconRelationOneToMany",
        "id": Any<String>,
        "isActive": true,
        "isCustom": true,
        "isLabelSyncedWithName": false,
        "isNullable": true,
        "isSystem": false,
        "isUIReadOnly": false,
        "isUnique": false,
        "kanbanAggregateOperationViewIds": [],
        "label": "newFieldLabel",
        "mainGroupByFieldMetadataViewIds": [],
        "morphId": Any<String>,
        "name": "newFieldCompanies",
        "objectMetadataId": Any<String>,
        "options": null,
        "relationTargetFieldMetadataId": Any<String>,
        "relationTargetObjectMetadataId": Any<String>,
        "settings": {
          "relationType": "ONE_TO_MANY",
        },
        "standardId": null,
        "standardOverrides": null,
        "type": "MORPH_RELATION",
        "universalIdentifier": Any<String>,
        "updatedAt": Any<String>,
        "viewFieldIds": [],
        "viewFilterIds": [],
        "workspaceId": Any<String>,
      },
      {
        "applicationId": Any<String>,
        "calendarViewIds": [],
        "createdAt": Any<String>,
        "defaultValue": null,
        "description": "new field description",
        "icon": "IconBuilding",
        "id": Any<String>,
        "isActive": true,
        "isCustom": true,
        "isLabelSyncedWithName": false,
        "isNullable": true,
        "isSystem": false,
        "isUIReadOnly": false,
        "isUnique": false,
        "kanbanAggregateOperationViewIds": [],
        "label": "Company",
        "mainGroupByFieldMetadataViewIds": [],
        "morphId": null,
        "name": "company",
        "objectMetadataId": Any<String>,
        "options": null,
        "relationTargetFieldMetadataId": Any<String>,
        "relationTargetObjectMetadataId": Any<String>,
        "settings": {
          "joinColumnName": "companyId",
          "onDelete": "SET_NULL",
          "relationType": "MANY_TO_ONE",
        },
        "standardId": null,
        "standardOverrides": null,
        "type": "RELATION",
        "universalIdentifier": Any<String>,
        "updatedAt": Any<String>,
        "viewFieldIds": [],
        "viewFilterIds": [],
        "workspaceId": Any<String>,
      },
    ],
    "indexMetadatas": [
      {
        "applicationId": Any<String>,
        "createdAt": Any<String>,
        "flatIndexFieldMetadatas": [
          {
            "createdAt": Any<String>,
            "fieldMetadataId": Any<String>,
            "id": Any<String>,
            "indexMetadataId": Any<String>,
            "order": 0,
            "updatedAt": Any<String>,
          },
        ],
        "id": Any<String>,
        "indexType": "BTREE",
        "indexWhereClause": null,
        "isCustom": true,
        "isUnique": false,
        "name": "IDX_f687e4e4252800dddd8e5518362",
        "objectMetadataId": Any<String>,
        "universalIdentifier": Any<String>,
        "updatedAt": Any<String>,
        "workspaceId": Any<String>,
      },
      {
        "applicationId": Any<String>,
        "createdAt": Any<String>,
        "flatIndexFieldMetadatas": [
          {
            "createdAt": Any<String>,
            "fieldMetadataId": Any<String>,
            "id": Any<String>,
            "indexMetadataId": Any<String>,
            "order": 0,
            "updatedAt": Any<String>,
          },
        ],
        "id": Any<String>,
        "indexType": "BTREE",
        "indexWhereClause": null,
        "isCustom": true,
        "isUnique": false,
        "name": "IDX_cb15d901e889e25d0a9acecb595",
        "objectMetadataId": Any<String>,
        "universalIdentifier": Any<String>,
        "updatedAt": Any<String>,
        "workspaceId": Any<String>,
      },
    ],
  },
  "status": "success",
}
`;
